<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.avinash.digitalmarketing.signuptab">

        <!--<TextView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dip"-->
            <!--android:gravity="center"-->
            <!--android:textSize="25dip"-->
            <!--android:text="REGISTER HERE"-->
            <!--android:textStyle="bold" />-->
        <View
            android:id="@+id/focus_view1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <requestFocus/>
        </View>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/uemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText3"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ufullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/uname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/phn_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number"
                android:maxLength="10"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/upass"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText2"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/upass1"
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText4"
            android:inputType="textPassword" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText5"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>
</ScrollView>