<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinash.digitalmarketing.ProductDescription">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="@dimen/text_size_table"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin_prod_descp"
                    android:textSize="@dimen/text_size_product_des"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textSize="@dimen/text_size_table"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/brand_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin_prod_descp"
                    android:textSize="@dimen/text_size_product_des"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offers"
                    android:textSize="@dimen/text_size_table"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin_prod_descp"
                    android:textSize="@dimen/text_size_product_des"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/text_size_table"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin_prod_descp"
                    android:textSize="@dimen/text_size_product_des"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_info"
                    android:textSize="@dimen/text_size_table"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/additional_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin_prod_descp"
                    android:textSize="@dimen/text_size_product_des"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/types"
                    android:textSize="@dimen/text_size_table"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/types_of_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin_prod_descp"
                    android:textSize="@dimen/text_size_product_des"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                </android.support.design.widget.TextInputLayout>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                    <TableRow>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dip"
                            android:gravity="center"
                            android:textSize="@dimen/text_size_table"
                            android:text="ITEM NAME"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dip"
                            android:gravity="center"
                            android:textSize="@dimen/text_size_table"
                            android:text="COST (Per piece)"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dip"
                            android:gravity="center"
                            android:textSize="@dimen/text_size_table"
                            android:text="QUANTITY"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemlist"
                    android:stretchColumns="*">
                </TableLayout>

                <Button
                    android:id="@+id/submit_order"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/order"
                    android:textColor="#FFFFFF"
                    />

            </LinearLayout>
    </ScrollView>
</RelativeLayout>