<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.avinash.digitalmarketing.EditProfile">

            <View
                android:id="@+id/focus_view1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <requestFocus/>
            </View>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText1"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText3"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile Number"
                    android:maxLength="10"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/prevpass"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Current Password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/newpass"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="New Password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/newpass1"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText4"
                android:inputType="textPassword" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editText5"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_profile"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Save"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>